# WoodsgateMeasurements

./: .gitignore  Main.ps1  Main.pyw  README.md  Report.pbit  docker-compose.yaml  manage.sh
_rpi_code/: MCP3008.py  calibrate.py  start.sh  woodsgate_5400.py  woodsgate_help.txt
webgui/: .gitignore  Dockerfile  compose.yaml  pyproject.toml
webgui/src/webgui/: __init__.py  index.py  repository.py
webgui/woodsgate_collector/: Dockerfile  pyproject.toml
webgui/woodsgate_collector/woodsgate_collector/: __init__.py  data_collector.py
