[project]
name = "webgui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mathias Toftås", email = "github.simplify147@passmail.net" },
]
requires-python = ">=3.11.2"
dependencies = ["nicegui>=2.22.2", "pandas>=2.3.1", "plotly>=6.2.0"]

[project.scripts]
webgui = "webgui:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
