[project]
name = "woodsgate-collector"
version = "0.1.0"
description = "Woodsgate tank level data collector"
requires-python = ">=3.11"
dependencies = [
    "smbus2>=0.4.0",
]

[project.scripts]
collector = "woodsgate_collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []